--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.imixs.util</groupId>
 	<artifactId>imixs-e-invoice</artifactId>
 	<packaging>jar</packaging>
-	<name>imixs-e-invoice</name>
+	<name>Imixs E-Invoice</name>
 	<version>1.0.0-SNAPSHOT</version>
 
 	<description>A simple java library to read and generate e-invoice documents</description>
