--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.imixs.util</groupId>
 	<artifactId>imixs-e-invoice</artifactId>
 	<packaging>jar</packaging>
 	<name>Imixs E-Invoice</name>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 
 	<description>A simple java library to read and generate e-invoice documents</description>
 	<url>https://github.com/imixs/e-invoice</url>
@@ -35,7 +33,7 @@
 		<connection>scm:git:git@github.com:imixs/e-invoice.git</connection>
 		<developerConnection>scm:git:git@github.com:imixs/e-invoice.git</developerConnection>
 		<url>https://github.com/imixs/e-invoice/</url>
-		<tag>HEAD</tag>
+		<tag>imixs-e-invoice-1.0.2</tag>
 	</scm>
 
 	<issueManagement>
